--- a/two-tier-app-svc.yml
+++ b/two-tier-app-svc.yml
@@ -7,10 +7,9 @@ metadata:
   namespace: app
 spec:
   ports:
-    - nodePort: 30006
       port: 80
       protocol: TCP
       targetPort: 5000
   selector:
     app: two-tier-app
-  type: NodePort
+  type: LoadBalancer 
