--- a/two-tier-app-svc.yml
+++ b/two-tier-app-svc.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app.kubernetes.io/instance: two-tier-app
   name: two-tier-app-service
   namespace: app
+  labels:
+    app.kubernetes.io/instance: two-tier-app
 spec:
-  ports:
-      port: 80
-      protocol: TCP
-      targetPort: 5000
+  type: LoadBalancer
   selector:
     app: two-tier-app
-  type: LoadBalancer 
+  ports:
+    - port: 80
+      protocol: TCP
+      targetPort: 5000
