--- a/two-tier-app-svc.yml
+++ b/two-tier-app-svc.yml
@@ -6,10 +6,11 @@ metadata:
   labels:
     app.kubernetes.io/instance: two-tier-app
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: two-tier-app
   ports:
-    - port: 80
+    - nodePort: 30006
+      port: 80
       protocol: TCP
       targetPort: 5000
