--- a/secrets.yml
+++ b/secrets.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
-  namespace: default  # Change to your desired namespace if needed
+  namespace: app  # Change to your desired namespace if needed
 type: Opaque
 data:
   MYSQL_ROOT_PASSWORD: YWRtaW4=  # base64 encoded value of "admin"
