--- a/two-tier-app-deployment.yml
+++ b/two-tier-app-deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: two-tier-app-pod
+  namespace: app
   labels:
     app: two-tier-app
 spec:
