--- a/mysql-pvc.yml
+++ b/mysql-pvc.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pvc
+  namespace: app
 spec:
   accessModes:
     - ReadWriteOnce
