--- a/secrets.yml
+++ b/secrets.yml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
-  namespace: app  # Change to your desired namespace if needed
+  namespace: app  # Change to the correct namespace you're using
 type: Opaque
 data:
   MYSQL_ROOT_PASSWORD: YWRtaW4=  # base64 encoded value of "admin"
   MYSQL_PASSWORD: YWRtaW4=        # base64 encoded value of "admin"
+  MYSQL_USER: YWRtaW4=            # base64 encoded value of "admin"
