--- a/mysql-svc.yml
+++ b/mysql-svc.yml
@@ -4,8 +4,9 @@ metadata:
   name: mysql
   namespace: app
 spec:
+  ports:
+  - port: 3306
+    targetPort: 3306
   selector:
     app: mysql
-  ports:
-    - port: 3306
-      targetPort: 3306
+  clusterIP: None
