--- a/two-tier-app-deployment.yml
+++ b/two-tier-app-deployment.yml
@@ -20,14 +20,25 @@ spec:
           image: chinar016/app:latest
           imagePullPolicy: Always
           env:
-            - name: MYSQL_HOST
-              value: "10.100.112.83"
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: MYSQL_ROOT_PASSWORD
+            - name: MYSQL_DATABASE
+              value: "mydb"  # Default database
             - name: MYSQL_USER
-              value: "root"
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: MYSQL_USER  # Use secret for username
             - name: MYSQL_PASSWORD
-              value: "admin"
-            - name: MYSQL_DB
-              value: "mydb"
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: MYSQL_PASSWORD  # Use secret for password
+            - name: MYSQL_HOST
+              value: "mysql"  # Service name, as defined in your app.py
           ports:
             - containerPort: 5000
           imagePullPolicy: Always
